header and hero

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -17,7 +17,9 @@
           ",
           "addClass": "catalog",
           "btn": "10% SALE",
-          "image": "catalog"
+          "image": "catalog",
+          "width_img": "523",
+          "height_img": "475"
         }
       </include>
 
