--- a/src/html/services/_inspiring.html
+++ b/src/html/services/_inspiring.html
@@ -22,7 +22,7 @@
     </li>
 
     <li class="inspiring__item inspiring__item--double">
-      <div class="inspiring__inner" style="background-image: url('./images/services/chic.jpeg');">
+      <div class="inspiring__inner" style="background-image: url('./images/services/fine.jpeg');">
         <div class="inspiring__content">
           <h3>
             Chic Urban Bar
