--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -17,7 +17,9 @@
           ",
           "addClass": "portfolio",
           "btn": "Learn More",
-          "image": "portfolio"
+          "image": "portfolio",
+          "width_img": "523",
+          "height_img": "475"
         }
       </include>
 
