--- a/src/index.html
+++ b/src/index.html
@@ -7,43 +7,27 @@
     <include src="./html/_header.html" locals='{"page": "home"}'></include>
 
     <main class="main">
+      <div class="container">
+        <include src="./html/_hero.html">
+          {
+            "title": "
+            Experience the Wonders of the Amazon with Us
+            ",
+            "text": "
+              Embark on exclusive journeys through the heart of the Amazon Rainforest, where unparalleled luxury meets untamed nature.
+            ",
+            "addClass": "home",
+            "btn": "Book your Tour",
+            "image": "home",
+            "width_img": "523",
+            "height_img": "475"
+          }
+        </include>
+      </div>
 
-      <include src="./html/_hero.html">
-        {
-          "title": "
-          Crafting Culinary Spaces with Style
-          ",
-          "text": "
-          Explore our expertise in outfitting cafes,  bars,  and restaurants with premium gear and furnishings
-          ",
-          "addClass": "home",
-          "btn": "Shop Now",
-          "image": "home"
-        }
-      </include>
-
-      <include src="./html/home/_crafting.html">
-        {
-          "span_a": "",
-          "text_a": "
-          Explore our expertise in outfitting cafes, bars, and restaurants with premium gear and furnishings
-          ",
-          "span_b": "",
-          "text_b": "
-          Let us handle the procurement process, sourcing top-quality gear and furnishings to elevate your establishment's aesthetic and functionality.
-          ",
-          "span_c": "",
-          "text_c": "
-          Our skilled team ensures seamless delivery, assembly, and installation of all equipment and furnishings, minimizing disruption to your operations.
-          ",
-          "span_d": "",
-          "text_d": "
-          Add unique personality to your space with our customization services, offering bespoke solutions to meet your specific needs and preferences.
-          "
-        }
-      </include>
+      <include src="./html/home/_about-us.html"></include>
       
-      <include src="./html/home/_portfolio.html"></include>
+      <include src="./html/_featured.html"></include>
       
       <div class="container">
 
