--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,43 @@
 
       <include src="./html/home/_about-us.html"></include>
       
-      <include src="./html/_featured.html"></include>
+      <include src="./html/_featured.html">
+        {
+          "addClass": "home",
+          "title": "FEATURED TOURS",
+          "text": "",
+          "buttonText": "See All",
+          "title_a": "AMAZON RIVER CRUISE",
+          "text_a": "
+          Explore the waterways of the Amazon in luxurious comfort.
+          ",
+          "image": "home",
+          "hiddenClass": "hidden",
+          "title_b": "CULTURAL IMMERSION",
+          "text_b": "
+          Connect with indigenous communities and learn about their traditions.
+          ",
+          "title_c": "JUNGLE EXPEDITION",
+          "text_c": "
+          Venture deep into the rainforest on an eco-friendly adventure
+          ",
+          "title_d": "",
+          "text_d": ""
+        }
+      </include>
+
+      <include src="./html/_discover.html">
+        {
+          "addClass": "home",
+          "title": "DISCOVER THE AMAZON",
+          "text": "
+          Dive into the heart of the Amazon Rainforest, where every corner holds a new discovery. From the towering canopy to the bustling riverbanks, let us guide you through an experience like no other.
+          ",
+          "buttonText": "Discover",
+          "image": "home",
+          "hiddenClass": ""
+        }
+      </include>
       
       <div class="container">
 
