--- a/src/html/_discover.html
+++ b/src/html/_discover.html
@@ -13,28 +13,29 @@
       {{text}}
     </p>
   </div>
+  <div class="discover__container">
+    <div class="discover-slider container">
+      <ul class="discover__grid swiper-wrapper">
+        <li class="discover__item swiper-slide">
+          <img src="./images/{{image}}/discover-1.jpeg" alt="{{title}}" width="472" height="308">
+        </li>
 
-  <div class="discover-slider container">
-    <ul class="discover__grid swiper-wrapper">
-      <li class="discover__item swiper-slide">
-        <img src="./images/{{image}}/discover-1.jpeg" alt="{{title}}" width="472" height="308">
-      </li>
+        <li class="discover__item swiper-slide">
+          <img src="./images/{{image}}/discover-2.jpeg" alt="{{title}}" width="506" height="308">
+        </li>
 
-      <li class="discover__item swiper-slide">
-        <img src="./images/{{image}}/discover-2.jpeg" alt="{{title}}" width="506" height="308">
-      </li>
+        <li class="discover__item swiper-slide">
+          <img src="./images/{{image}}/discover-3.jpeg" alt="{{title}}" width="369" height="308">
+        </li>
 
-      <li class="discover__item swiper-slide">
-        <img src="./images/{{image}}/discover-3.jpeg" alt="{{title}}" width="369" height="308">
-      </li>
+        <li class="discover__item swiper-slide {{hiddenClass}}">
+          <img src="./images/{{image}}/discover-4.jpeg" alt="{{title}}" width="369" height="308">
+        </li>
 
-      <li class="discover__item swiper-slide {{hiddenClass}}">
-        <img src="./images/{{image}}/discover-4.jpeg" alt="{{title}}" width="369" height="308">
-      </li>
-
-      <li class="discover__item swiper-slide {{hiddenClass}}">
-        <img src="./images/{{image}}/discover-5.jpeg" alt="{{title}}" width="200" height="308">
-      </li>
-    </ul>
+        <li class="discover__item swiper-slide {{hiddenClass}}">
+          <img src="./images/{{image}}/discover-5.jpeg" alt="{{title}}" width="200" height="308">
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
