--- a/src/html/home/_request.html
+++ b/src/html/home/_request.html
@@ -1,26 +1,28 @@
 <section class="request">
-  <h2>
-    Contact us
-  </h2>
+  <div class="request__content">
+    <h2>
+      Sign Up
+    </h2>
 
-  <form class="request__form">
-    <label>
-      <input type="text" placeholder="Your Name">
-    </label>
+    <form class="request__form">
+      <label>
+        <input type="text" placeholder="Name">
+      </label>
 
-    <label>
-      <input type="email" placeholder="Your  E-mail">
-    </label>
+      <label>
+        <input type="email" placeholder="Email">
+      </label>
 
-    <label>
-      <textarea name="message" id="message" placeholder="Your Comment.."></textarea>
-    </label>
-    
-    <button class="btn btn--request" type="button">
-      Send Message
-    </button>
-  </form>
+      <label>
+        <textarea name="message" id="message" placeholder="Where do you want to travel?"></textarea>
+      </label>
+      
+      <button class="btn btn--simple" type="button">
+        Send Message
+      </button>
+    </form>
+  </div>
 
-  <img src="./images/home/request.jpeg" alt="Contact us" width="1240" height="500">
+  <img src="./images/home/request.png" alt="Contact us" width="332" height="320">
 
 </section>
