--- a/src/index.html
+++ b/src/index.html
@@ -66,9 +66,22 @@
       </include>
       
       <div class="container">
-
-        <include src="./html/home/_help.html"></include>
-        <include src="./html/home/_reviews.html"></include>
+        <include src="./html/_testimonials.html">
+          {
+            "addClass": "home",
+            "title": "Hear Testimonials from our satisfied travelers, And come to explore with us",
+            "title_a": "Laura M.",
+            "text_a": "An unforgettable journey! The guides were knowledgeable, and the accommodations exceeded our expectations.",
+            "image": "home",
+            "hiddenClass": "hidden",
+            "title_b": "John F.",
+            "text_b": "A perfect blend of adventure and luxury. Highly recommended!",
+            "title_c": "",
+            "text_c": "",
+            "title_d": "",
+            "text_d": ""
+          }
+        </include>
 
         <include src="./html/home/_request.html"></include>
       </div>
