--- a/src/html/_featured.html
+++ b/src/html/_featured.html
@@ -11,56 +11,57 @@
       {{buttonText}}
     </a>
   </div>
+  <div class="featured__container">
+    <div class="featured-slider container">
+      <ul class="featured__grid swiper-wrapper">
+        <li class="featured__item swiper-slide">
+          <img src="./images/{{image}}/featured-1.jpeg" alt="{{title_a}}" width="688" height="403">
+          <div class="featured__content">
+            <h3>
+              {{title_a}}
+            </h3>
+            <p>
+              {{text_a}}
+            </p>
+          </div>
+        </li>
 
-  <div class="featured-slider container">
-    <ul class="featured__grid swiper-wrapper">
-      <li class="featured__item swiper-slide">
-        <img src="./images/{{image}}/featured-1.jpeg" alt="{{title_a}}" width="688" height="403">
-        <div class="featured__content">
-          <h3>
-            {{title_a}}
-          </h3>
-          <p>
-            {{text_a}}
-          </p>
-        </div>
-      </li>
+        <li class="featured__item swiper-slide">
+          <img src="./images/{{image}}/featured-2.jpeg" alt="{{title_b}}" width="688" height="403">
+          <div class="featured__content">
+            <h3>
+              {{title_b}}
+            </h3>
+            <p>
+              {{text_b}}
+            </p>
+          </div>
+        </li>
 
-      <li class="featured__item swiper-slide">
-        <img src="./images/{{image}}/featured-2.jpeg" alt="{{title_b}}" width="688" height="403">
-        <div class="featured__content">
-          <h3>
-            {{title_b}}
-          </h3>
-          <p>
-            {{text_b}}
-          </p>
-        </div>
-      </li>
+        <li class="featured__item swiper-slide">
+          <img src="./images/{{image}}/featured-3.jpeg" alt="{{title_c}}" width="688" height="403">
+          <div class="featured__content">
+            <h3>
+              {{title_c}}
+            </h3>
+            <p>
+              {{text_c}}
+            </p>
+          </div>
+        </li>
 
-      <li class="featured__item swiper-slide">
-        <img src="./images/{{image}}/featured-3.jpeg" alt="{{title_c}}" width="688" height="403">
-        <div class="featured__content">
-          <h3>
-            {{title_c}}
-          </h3>
-          <p>
-            {{text_c}}
-          </p>
-        </div>
-      </li>
-
-      <li class="featured__item swiper-slide {{hiddenClass}}">
-        <img src="./images/{{image}}/featured-4.jpeg" alt="{{title_d}}" width="688" height="403">
-        <div class="featured__content">
-          <h3>
-            {{title_d}}
-          </h3>
-          <p>
-            {{text_d}}
-          </p>
-        </div>
-      </li>
-    </ul>
+        <li class="featured__item swiper-slide {{hiddenClass}}">
+          <img src="./images/{{image}}/featured-4.jpeg" alt="{{title_d}}" width="688" height="403">
+          <div class="featured__content">
+            <h3>
+              {{title_d}}
+            </h3>
+            <p>
+              {{text_d}}
+            </p>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
