--- a/src/html/home/_request.html
+++ b/src/html/home/_request.html
@@ -1,4 +1,4 @@
-<section class="request">
+<section class="request request--{{addClass}}">
   <div class="request__content">
     <h2>
       Sign Up
