--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,11 @@
           }
         </include>
 
-        <include src="./html/home/_request.html"></include>
+        <include src="./html/home/_request.html">
+          {
+            "addClass": ""
+          }
+        </include>
       </div>
 
     </main>
