--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -11,7 +11,7 @@
       <div class="nav__inner">
         <ul class="nav__list">
           <li class="nav__item nav__item--menu">
-            <a href="index.html" class="nav__link {{ page === 'tours-excursions' }} nav__link--menu">
+            <a href="tours-and-excursions.html" class="nav__link {{ page === 'tours-and-excursions' }} nav__link--menu">
               Tours & Excursions
             </a>
 
@@ -53,7 +53,7 @@
           </li>
 
           <li class="nav__item">
-            <a href="portfolio.html" class="nav__link {{ page === 'portfolio' }}">
+            <a href="about-us.html" class="nav__link {{ page === 'about-us' }}">
               About Us
             </a>
           </li>
