--- a/src/html/_featured.html
+++ b/src/html/_featured.html
@@ -24,6 +24,9 @@
               {{text_a}}
             </p>
           </div>
+          <a class="featured__link" href="portfolio.html">
+            See More
+          </a>
         </li>
 
         <li class="featured__item swiper-slide">
@@ -36,6 +39,9 @@
               {{text_b}}
             </p>
           </div>
+          <a class="featured__link" href="portfolio.html">
+            See More
+          </a>
         </li>
 
         <li class="featured__item swiper-slide">
@@ -48,6 +54,9 @@
               {{text_c}}
             </p>
           </div>
+          <a class="featured__link" href="portfolio.html">
+            See More
+          </a>
         </li>
 
         <li class="featured__item swiper-slide {{hiddenClass}}">
@@ -60,6 +69,9 @@
               {{text_d}}
             </p>
           </div>
+          <a class="featured__link" href="portfolio.html">
+            See More
+          </a>
         </li>
       </ul>
     </div>
