--- a/src/html/tours-excursions/_additional.html
+++ b/src/html/tours-excursions/_additional.html
@@ -1,8 +1,9 @@
 <section class="additional additional--tours-excursions" id="additional">
   <p>
-    <span  class="text__light">Experience</span>
-    <span  class="text__green">professionalism, </span>
-    <span  class="text__green">reliability, </span>
-    <span> <span  class="text__green">and safety </span> in every aspect of our tours.</span>
+    <span>Enhance your experience <span  class="text__light">with</span></span>
+    <span  class="text__green">private guides,  </span>
+    <span  class="text__green">wildlife photography workshops,  </span>
+    <span> <span  class="text__green">and cultural workshops </span> to personalize your </span>
+    <span>adventure.</span>
   </p>
 </section>
