--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -35,7 +35,7 @@
           </li>
 
           <li class="nav__item">
-            <a href="services.html" class="nav__link {{ page === 'services' }}">
+            <a href="destinations.html" class="nav__link {{ page === 'destinations' }}">
               Destinations
             </a>
           </li>
