--- a/src/amazon.html
+++ b/src/amazon.html
@@ -10,14 +10,14 @@
       <div class="container">
         <include src="./html/destinations/_park.html">
           {
-            "image_a": "violet-flover.jpeg",
-            "image_b": "lotos-flover.jpeg",
-            "title": "Manu National Park",
-            "geography": "Located in Peru, known for its biodiversity.",
-            "attractions": "Birdwatching, jungle treks.",
-            "activities": "Wildlife photography, eco-tours.",
-            "span": "Manu National Park is a heaven for nature lovers.",
-            "comment": "- Kevin M."
+            "image_a": "amazon.jpeg",
+            "image_b": "river.jpeg",
+            "title": "Amazon River",
+            "geography": "Spanning several countries with diverse habitats.",
+            "attractions": "River cruises, wildlife viewing.",
+            "activities": "Kayaking, fishing, guided tours.",
+            "span": "The Amazon River was an unforgettable experience!",
+            "comment": "- Laura P."
           }
         </include>
       </div>
