--- a/src/html/_featured.html
+++ b/src/html/_featured.html
@@ -12,7 +12,7 @@
     </a>
   </div>
   <div class="featured__container">
-    <div class="featured-slider container">
+    <div class="featured-slider container featured-slider--{{addClass}}">
       <ul class="featured__grid swiper-wrapper">
         <li class="featured__item swiper-slide">
           <img src="./images/{{image}}/featured-1.jpeg" alt="{{title_a}}" width="688" height="403">
@@ -24,7 +24,7 @@
               {{text_a}}
             </p>
           </div>
-          <a class="featured__link" href="portfolio.html">
+          <a class="featured__link" href="park-manu.html">
             See More
           </a>
         </li>
@@ -39,7 +39,7 @@
               {{text_b}}
             </p>
           </div>
-          <a class="featured__link" href="portfolio.html">
+          <a class="featured__link" href="park-yasuni.html">
             See More
           </a>
         </li>
@@ -54,7 +54,7 @@
               {{text_c}}
             </p>
           </div>
-          <a class="featured__link" href="portfolio.html">
+          <a class="featured__link" href="amazon.html">
             See More
           </a>
         </li>
