--- a/src/html/destinations/_park.html
+++ b/src/html/destinations/_park.html
@@ -36,7 +36,7 @@
 
       <div class="park__comment">
         <p>
-          {{comment}}
+          "{{span}}" {{comment}}
         </p>
       </div>
     </div>
