--- a/src/html/tours-excursions/_tours.html
+++ b/src/html/tours-excursions/_tours.html
@@ -1,6 +1,6 @@
 <section class="tours" id="tours">
     <ul class="tours__list">
-        <li class="tours__item tours__item--amazon">
+        <li class="tours__item tours__item--amazon" id="amazon-river">
             <div class="container">
                 <div class="tours__title">
                     <h2>
@@ -26,7 +26,7 @@
             </div>
         </li>
 
-        <li class="tours__item tours__item--jungle">
+        <li class="tours__item tours__item--jungle" id="jungle">
             <div class="container">
                 <div class="tours__title">
                     <h2>
@@ -52,7 +52,7 @@
             </div>
         </li>
 
-        <li class="tours__item tours__item--cultural">
+        <li class="tours__item tours__item--cultural" id="cultural">
             <div class="container">
                 <div class="tours__title">
                     <h2>
