--- a/src/park-yasuni.html
+++ b/src/park-yasuni.html
@@ -10,14 +10,14 @@
       <div class="container">
         <include src="./html/destinations/_park.html">
           {
-            "image_a": "violet-flover.jpeg",
-            "image_b": "lotos-flover.jpeg",
-            "title": "Manu National Park",
+            "image_a": "parrot.jpeg",
+            "image_b": "forrest.jpeg",
+            "title": "Yasuni National Park",
             "geography": "Located in Peru, known for its biodiversity.",
             "attractions": "Birdwatching, jungle treks.",
             "activities": "Wildlife photography, eco-tours.",
-            "span": "Manu National Park is a heaven for nature lovers.",
-            "comment": "- Kevin M."
+            "span": "Yasuni National Park is so beautiful that it would take you some time to process it",
+            "comment": "- Leticia G."
           }
         </include>
       </div>
@@ -27,7 +27,7 @@
           {
             "addClass": "destinations",
             "text": "
-            Experience professionalism, reliability, and safety in every aspect of our tours.
+            Embrace Adventure, Explore the Amazon with Us
             "
           }
         </include>
