--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -17,17 +17,17 @@
 
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="services.html" class="menu__link {{ page === 'services' }}">
+                <a href="tours-and-excursions.html#amazon-river" class="menu__link {{ page === 'tours-and-excursions' }}">
                   River Cruise
                 </a>
               </li>
               <li class="menu__item">
-                <a href="services.html" class="menu__link {{ page === 'services' }}">
+                <a href="tours-and-excursions.html#cultural" class="menu__link {{ page === 'tours-and-excursions' }}">
                   Cultural Immersion
                 </a>
               </li>
               <li class="menu__item">
-                <a href="services.html" class="menu__link {{ page === 'services' }}">
+                <a href="tours-and-excursions.html#jungle" class="menu__link {{ page === 'tours-and-excursions' }}">
                   Jungle Tour
                 </a>
               </li>
@@ -41,7 +41,7 @@
           </li>
 
           <li class="nav__item">
-            <a href="catalog.html" class="nav__link {{ page === 'catalog' }}">
+            <a href="wildlife.html" class="nav__link {{ page === 'wildlife' }}">
               Wildlife & Nature
             </a>
           </li>
