--- a/src/about-us.html
+++ b/src/about-us.html
@@ -13,6 +13,7 @@
             "title": "
             Welcome to Amazon Luxury Expeditions,
             ",
+            "span": "",
             "text": "
             where our passion for the Amazon Rainforest drives us to offer the most unique and sustainable travel experiences.
             ",
