--- a/src/destinations.html
+++ b/src/destinations.html
@@ -13,6 +13,7 @@
             "title": "
             Discover the diverse ecosystems of the Amazon Rainforest
             ",
+            "span": "",
             "text": "
             It’s time to enjoy unique locations and breathtaking scenery
             ",
