--- a/src/html/_discover.html
+++ b/src/html/_discover.html
@@ -4,7 +4,7 @@
       <h2>
         {{title}}
       </h2>
-      <a class="btn btn--simple" href="portfolio.html">
+      <a class="btn btn--simple" href="destinations.html">
         {{buttonText}}
       </a>
     </div>
@@ -18,22 +18,37 @@
       <ul class="discover__grid swiper-wrapper">
         <li class="discover__item swiper-slide">
           <img src="./images/{{image}}/discover-1.jpeg" alt="{{title}}" width="472" height="308">
+          <p class="discover__text">
+            1. Stay Quiet and Still: Minimize noise and sudden movements to avoid scaring animals away. Patience and silence increase your chances of observing wildlife up close.
+          </p>
         </li>
 
         <li class="discover__item swiper-slide">
           <img src="./images/{{image}}/discover-2.jpeg" alt="{{title}}" width="506" height="308">
+          <p class="discover__text">
+            2. Use Binoculars: Bring a good pair of binoculars to observe animals from a distance without disturbing their natural behavior.
+          </p>
         </li>
 
         <li class="discover__item swiper-slide">
           <img src="./images/{{image}}/discover-3.jpeg" alt="{{title}}" width="369" height="308">
+          <p class="discover__text">
+            3. Wear Neutral Colors: Dress in earth tones to blend into the environment and avoid bright colors that may alert or startle wildlife.
+          </p>
         </li>
 
         <li class="discover__item swiper-slide {{hiddenClass}}">
           <img src="./images/{{image}}/discover-4.jpeg" alt="{{title}}" width="369" height="308">
+          <p class="discover__text">
+            4. Respect Their Space: Maintain a safe and respectful distance from animals to ensure both your safety and theirs. Avoid approaching or feeding them.
+          </p>
         </li>
 
         <li class="discover__item swiper-slide {{hiddenClass}}">
           <img src="./images/{{image}}/discover-5.jpeg" alt="{{title}}" width="200" height="308">
+          <p class="discover__text">
+            5. Enjoy. Discover. Breathe.
+          </p>
         </li>
       </ul>
     </div>
