--- a/src/html/_featured.html
+++ b/src/html/_featured.html
@@ -7,7 +7,7 @@
       {{text}}
     </p>
 
-    <a class="btn btn--simple" href="portfolio.html">
+    <a class="btn btn--simple" href="tours-and-excursions.html">
       {{buttonText}}
     </a>
   </div>
@@ -69,9 +69,6 @@
               {{text_d}}
             </p>
           </div>
-          <a class="featured__link" href="portfolio.html">
-            See More
-          </a>
         </li>
       </ul>
     </div>
