--- a/src/html/_hero.html
+++ b/src/html/_hero.html
@@ -6,6 +6,9 @@
   <div class="hero__content">
     <h1>
       {{title}}
+      <span>
+        {{span}}
+      </span>
     </h1>
     <div class="hero__{{addClass}}">
       <p >
