--- a/src/html/home/_about-us.html
+++ b/src/html/home/_about-us.html
@@ -19,7 +19,7 @@
           <p>
             At Amazon Luxury Expeditions, our mission is to provide unforgettable, sustainable travel experiences that showcase the breathtaking beauty and cultural richness of the Amazon Rainforest.        
           </p>
-          <a class="btn btn--link read-more-btn" href="portfolio.html">
+          <a class="btn btn--link read-more-btn" href="about-us.html">
             Learn More
           </a>
         </div>
@@ -34,7 +34,7 @@
           <p>
             Meet our passionate team of experts dedicated to creating extraordinary adventures. Our guides and staff are committed to ensuring your journey is safe, enriching, and deeply connected to the environment and communities we visit.
           </p>
-          <a class="btn btn--link read-more-btn" href="portfolio.html">
+          <a class="btn btn--link read-more-btn" href="about-us.html">
             Learn More
           </a>
         </div>
