--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
             "title": "
             Experience the Wonders of the Amazon with Us
             ",
+            "span": "",
             "text": "
               Embark on exclusive journeys through the heart of the Amazon Rainforest, where unparalleled luxury meets untamed nature.
             ",
