--- a/src/tours-and-excursions.html
+++ b/src/tours-and-excursions.html
@@ -13,6 +13,7 @@
             "title": "
             from jungle expeditions and river cruises to cultural immersions.
             ",
+            "span": "",
             "text": "
             Each tour category offers unique experiences designed to highlight the best of the Amazon.
             ",
