--- a/src/wildlife.html
+++ b/src/wildlife.html
@@ -13,6 +13,7 @@
             "title": "
             The Amazon Rainforest is home to an extraordinary range of wildlife, plants, and ecosystems.
             ",
+            "span": "",
             "text": "",
             "addClass": "wildlife",
             "btn": "",
@@ -56,21 +57,30 @@
 
       <include src="./html/_discover.html">
         {
-          "addClass": "about-us",
-          "title": "ENVIRONmental Stewardship",
+          "addClass": "wildlife",
+          "title": "WILDLIFE WATHCING TIPS",
           "text": "
-          We minimize our environmental footprint through sustainable tour operations, eco-friendly accommodations, and green transportation.
+          Follow these tips of wild watching during the tour to minimize our environmental footprint 
           ",
           "buttonText": "",
-          "image": "about-us",
+          "image": "wildlife",
           "hiddenClass": ""
         }
       </include>
-      
+
       <div class="container">
+        <include src="./html/_additional.html">
+          {
+            "addClass": "wildlife",
+            "text": "
+            CHOOSE THE PERFECT SEASON FOR YOUR voyage
+            "
+          }
+        </include>
+      
         <include src="./html/home/_request.html">
           {
-            "addClass": "about-us"
+            "addClass": "wildlife"
           }
         </include>
       </div>
