--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -47,7 +47,7 @@
           </li>
 
           <li class="nav__item">
-            <a href="portfolio.html" class="nav__link {{ page === 'portfolio' }}">
+            <a href="tips.html" class="nav__link {{ page === 'tips' }}">
               Travel Tips
             </a>
           </li>
