adaptive home and tours pages

--- a/src/html/_hero.html
+++ b/src/html/_hero.html
@@ -14,7 +14,7 @@
       <p >
         {{text}}
       </p>
-      <button class="btn btn--request request-btn" type="button">
+      <button class="btn btn--request request-btn" type="button" formsappId="6656ef0cf6f2e174dcbdac8e">
         {{btn}}
       </button>
     </div>
