--- a/src/html/tours-excursions/_about-us.html
+++ b/src/html/tours-excursions/_about-us.html
@@ -21,7 +21,7 @@
             <p>
               Enjoy a luxurious cruise with daily excursions. 
             </p>
-            <a class="btn btn--simple" href="index.html">
+            <a class="btn btn--simple" href="tours-and-excursions.html#amazon-river">
               Learn more
             </a>
           </div>
@@ -38,7 +38,7 @@
             <p>
               Experience the thrill of trekking through dense rainforest.
             </p>
-            <a class="btn btn--simple" href="index.html">
+            <a class="btn btn--simple" href="tours-and-excursions.html#jungle">
               Learn more
             </a>
           </div>
@@ -55,7 +55,7 @@
             <p>
               Engage with local communities and their traditions
             </p>
-            <a class="btn btn--simple" href="index.html">
+            <a class="btn btn--simple" href="tours-and-excursions.html#cultural">
               Learn more
             </a>
           </div>
