--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -7,10 +7,15 @@
     <include src="./html/_header.html"></include>
 
     <main class="main">
-      <div class="container">
+      <div class="container container--policy">
         <include src="./html/policy/_policy.html"></include>
+        
+        <include src="./html/home/_request.html">
+          {
+            "addClass": "policy"
+          }
+        </include>
       </div>
-
     </main>
 
     <include src="./html/_footer.html"></include>
