--- a/src/tours-and-excursions.html
+++ b/src/tours-and-excursions.html
@@ -6,7 +6,7 @@
   <div class="site-container">
     <include src="./html/_header.html" locals='{"page": "tours-and-excursions"}'></include>
 
-    <main class="main">
+    <main class="main main--tours">
       <div class="container">
         <include src="./html/_hero.html">
           {
@@ -35,9 +35,6 @@
 
       <div class="container">
         <include src="./html/tours-excursions/_faq.html"></include>
-      </div>
-      
-      <div class="container">
 
         <include src="./html/tours-excursions/_additional.html"></include>
 
